--- a/functions/package.json
+++ b/functions/package.json
@@ -2,12 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
+  "vercel-build": "echo 'skip build, serverless functions only'"
+},
   "engines": {
     "node": "22"
   },
